test/types/string/psahabu/join-tuples-error.good
join-tuples-error.chpl:2: error: join() on tuples only handles homogeneous tuples of strings
