test/types/string/psahabu/join-tuples-error.chpl
var breaker = ("fish", 2);
writeln('"', " ".join(breaker), '"');
